--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <p>Brain clutter, fidgety behavior, anxiety, analysis paralysis be gone! Prioritize tells you which task to do based on the task with the highest priority available. If you want to eat ice cream but completing a project has a higher priority, that ice creams gonna have to be pushed down the stack until you pop that project first!</p>
 
-<p>Available soon on the app store!</p>
+<p>Search 'Prioritize Tasks' in the App Store!</p>
 
 <p>Made with React Native and Reflux. </p>
         </section>
